<resources>
    <string name="app_name">이거 사!</string>
    <string name="bottom_tab_main">Main</string>
    <string name="bottom_tab_my_list">MyList</string>
    <string name="bottom_tab_sns">SNS</string>
    <string name="login_success">로그인 성공</string>
    <string name="login_error">이메일과 비밀번호를 확인해 주세요</string>
    <string name="login_empty_input_error">이메일 또는 비밀번호를 입력해 주세요</string>
    <string name="signup_empty_input_error">값을 다 입력해주세요</string>
    <string name="signup_success">회원가입 성공</string>
    <string name="signup_error">값들을 다시 확인해주세요</string>
    <string name="empty_email">이메일을 입력해 주세요</string>
    <string name="email_validation">사용가능한 이메일 입니다.</string>
    <string name="email_duplication">중복된 이메일 입니다</string>
    <string name="email_format_error">잘못된 이메일 형식입니다</string>
    <string name="email_hint">가입한 이메일</string>
    <string name="email_check">이메일 체크</string>
    <string name="password_confirm_true">비밀번호가 일치합니다</string>
    <string name="password_confirm_false">비밀번호가 일치하지 않습니다</string>
    <string name="password_hint">비밀번호</string>
    <string name="login">로그인</string>
    <string name="signup">가입하기</string>
    <string name="signup_hint">계정이 없으신가요?</string>
    <string name="password_confirm_hint">비밀번호 확인</string>
    <string name="male">남성</string>
    <string name="female">여성</string>
    <string name="age">나이</string>
    <string name="menu_search">search</string>
    <string name="permission_location_title">위치 권한 설정</string>
    <string name="permission_location_message">위치 권한을 설정하시겠습니까?</string>

    <string name="sns_my_post">내 게시물</string>
    <string name="min_price">최저 %1$s원</string>
    <string name="min_price_num">최저 %1$s원 / %2$d개</string>
    <string name="total_price">총 %1$s원</string>
    <string name="goods_count">수량 : %1$d</string>
    <string name="none_min_price">정보없음</string>
    <string name="none_min_price_num">정보없음 / %1$d개</string>
    <string name="create_list_title">이거 사! 추천 리스트</string>
    <string name="list_goods_add_hint">찾는 아이템이 없으면 추가해보세요!</string>
    <string name="decide">decide</string>
    <string name="write">등록</string>
    <string name="write_reply_hint"><font size="12">이용자들이 참고할수 있는 사항을 입력해주세요 :)</font></string>
    <string name="from">~</string>
    <string name="title_activity_create_list_info">이거사! 리스트 결정</string>
    <string name="title">title</string>
    <string name="hashtag">hashTag</string>
    <string name="hashtag_hint">이번 여행의 포인트는!? #먹방</string>
    <string name="empty_goods">항목을 한개이상 선택해 주세요~!</string>
    <string name="already_tag">이미 선택한 태그입니다.</string>
    <string name="cancel_create_list">선택한 내용이 전부 사라질수 있습니다.\n정말 뒤로가시겠습니까?</string>
    <string name="confirm">확인</string>
    <string name="notice_reply_length">댓글은 5자 이상 입력해 주세요 :)</string>
    <string name="none_item">추가로 보여드릴 %s 정보가 없네요 :(\n처음으로 작성해보세요!</string>
    <string name="toast_goods">꿀템 리스트</string>
    <string name="toast_reply">사용자 댓글</string>
    <string name="fail_load"><![CDATA[정보를 가져오는데 실패했습니다 :<]]></string>
    <string name="toast_mylist">내 리스트</string>
    <string name="toast_my_items">내 아이템</string>
    <string name="post_replay_hint">댓글 달기</string>
    <string name="like">좋아요  </string>
    <string name="like_number">개</string>
    <string name="post_content_hint">자신의 여행 쇼핑리스트를 자랑해 보세요!</string>
    <string name="select">선택하기</string>
    <string name="shopping_list_select">쇼핑리스트를 선택해 주세요!</string>
    <string name="add_post">게시글 작성</string>
    <string name="reply">댓글</string>
    <string name="what_do_you_want">찾으시는 물품이 있나요!?</string>
    <string name="add_goods">추가하기</string>
    <string name="write_reply">의견쓰기</string>
    <string name="title_activity_write_reply">WriteReplyActivity</string>
    <string name="hint_select_star">점수를 선택해 주세요!</string>
    <string name="save_reply">작성하기</string>
    <string name="cancle_write_reply">작성한 의견이 모두 사라질 수 있습니다.\n뒤로가시겠습니까?</string>
    <string name="delete_reply">삭제하기</string>
    <string name="report_reply">신고하기</string>
    <string name="title_activity_goods_cart">GoodsCartActivity</string>
    <string name="confrim_goods">결정하기</string>
    <string name="predict_string">예상금액</string>
    <string name="goods_add_cart">추가되었습니다!</string>
    <string name="no_select_item"><![CDATA[선택한 항목이 하나도 없네요 :<]]></string>
    <string name="cancle">취소</string>
    <string name="would_you_save">변경한 내용을 저장하시겠습니까?</string>
    <string name="success_save">저장되었습니다.</string>
    <string name="modify_post">게시글 수정</string>
    <string name="modify">수정</string>
    <string name="make_list">쇼핑리스트 생성하기!</string>
    <string name="save_my_goods_status">저장하기</string>
    <string name="delete_my_list">리스트 삭제하기</string>
    <string name="would_you_delete_goods">아이템을 리스트에서 삭제하시겠습니까?</string>
    <string name="detail_review_label">평가 및 리뷰</string>
    <string name="ratio_count">%d개의 평가</string>
    <string name="no_search_result">검색 결과가 없습니다 :(</string>
    <string name="title_activity_add_goods">AddGoodsActivity</string>
    <string name="none_click_goods">클릭 불가능한 아이템입니다.</string>
    <string name="empty_add_item">선택한 아이템이 없어요 :(</string>
    <string name="wolud_you_select_score">점수를 선택해주세요 :)</string>
    <string name="email_honey_list">의 꿀템리스트!</string>
    <string name="email">이메일</string>
    <string name="complete_but_goods">입력하신 모든 꿀템을 구입했어요!\n즐거운 여행 되세요 ^^\n(완료된 리스트는 수정이 불가능합니다.)</string>
    <string name="would_you_set_title">제목을 입력해 주세요 :)</string>
    <string name="would_you_remove_check_list">삭제된 리스트는 복구되지 않아요! 정말로 삭제하시겠습니까?</string>

    <string name="sign_up_word">회원가입</string>
    <string name="shopping_list_alert">쇼핑리스트를 선택하셔야지만 글을 게시할 수 있습니다!</string>
    <string name="problem_occur">문제가 생겼습니다. 다시 시도해 주세요!</string>
    <string name="email_my_post">님의 게시글</string>
    <string name="no_post">아직 게시글이 없어요... 게시글을 생성해볼까요?</string>
    <string name="no_reply">아직 댓글이 없어요</string>
</resources>
