<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.writereply.WriteReplyActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_screen"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:fitsSystemWindows="true"
            android:background="@color/colorWhite"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/btn_back"
            app:popupTheme="@style/AppToolbar" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llc_select_score"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_screen">

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/rb_reply"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:isIndicator="true"
                android:rating="0"
                android:stepSize="0.5" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:text="@string/hint_select_star" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <View
            android:id="@+id/view_star_divide"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:background="@color/colorDivide"
            app:layout_constraintTop_toBottomOf="@id/llc_select_score" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_reply_content"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:textSize="14sp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/write_reply_hint"
            android:paddingBottom="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_star_divide" />

        <View
            android:id="@+id/view_bottom"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorDivide"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_reply_content" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_write_reply"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="16dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:background="@drawable/layout_accent_round_board"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/save_reply"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view_bottom" />

        <include
            android:id="@+id/include_loading"
            layout="@layout/layout_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>