<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/cl_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/abl_top_control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="0dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/colorMyListAppBar"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar_screen"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/colorBlurGray"
                    android:fitsSystemWindows="true"
                    app:layout_collapseMode="pin"
                    app:navigationIcon="@drawable/btn_all_back"
                    app:popupTheme="@style/AppToolbar">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginLeft="@dimen/space_x_small"
                        app:srcCompat="@drawable/ic_logo_ejusa" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:text="이거 사!"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp" />
                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsv_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="60dp"
            android:descendantFocusability="blocksDescendants"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context=".ui.createlistinfo.CreateListInfo">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:hint="@string/title"
                        app:counterEnabled="true"
                        app:counterMaxLength="30"
                        app:helperTextEnabled="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="30"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_tag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:hint="@string/hashtag"
                        app:counterEnabled="true"
                        app:counterMaxLength="15"
                        app:helperText="@string/hashtag_hint"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/til_title">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_hashtag"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_hash"
                            android:imeOptions="actionGo"
                            android:maxLength="15"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/cg_hash_set"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_margin="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/til_tag" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/cb_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="16dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="16dp"
                        android:text="전체선택"
                        android:textSize="16sp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_cart_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorDivide"
                    android:descendantFocusability="blocksDescendants"
                    tools:listitem="@layout/item_cart" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_bottom_root"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:background="@color/colorBottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_dicide_cart"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_margin="8dp"
                android:background="@drawable/layout_accent_round_board"
                android:ellipsize="end"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:singleLine="true"
                android:text="@string/confrim_goods"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_total_price"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_total_price"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_margin="8dp"
                android:background="@drawable/layout_accent_round_stroke"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:singleLine="true"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>